# api_final_yatube

./: README.md  main.py  p.toml  pyproject.toml  specifications.txt
tests/: conftest.py  test_comment.py  test_follow.py  test_post.py
tests/fixtures/: fixture_user.py
yatube_api/api/: pagination.py  serializers.py  urls.py  views.py
yatube_api/posts/: models.py
yatube_api/yatube_api/: settings.py
